--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "description": "React (Vite) capstone project for CIT 382: a Konbini Tracker that lists items by store, supports filtering, and lets users favorite items.",
   "main": "index.js",
   "scripts": {
-  "dev": "vite",
-  "build": "vite build",
-  "preview": "vite preview"
-},
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/mikayla-goodi/konbini-capstone.git"
@@ -22,7 +22,8 @@
   "homepage": "https://github.com/mikayla-goodi/konbini-capstone#readme",
   "dependencies": {
     "react": "^19.2.3",
-    "react-dom": "^19.2.3"
+    "react-dom": "^19.2.3",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^5.1.2",
